Muevo el HTMl para mostrar el resumen de un post a un include de Twig.

--- a/source/_views/components/sidebar.html.twig
+++ b/source/_views/components/sidebar.html.twig
@@ -9,7 +9,7 @@
     </div>
 </div>
 <div class="panel panel-default">
-    <div class="panel-heading"><h4 class="panel-title">Links</h4></div>
+    <div class="panel-heading"><h4 class="panel-title">Sitios de interés</h4></div>
     <div class="list-group">
         <a href="http://www.comunidadphppuebla.com" class="list-group-item">Comunidad PHP Puebla</a>
         <a href="http://www.hfpuebla.org/" class="list-group-item">Hackers & Founders</a>
