Agrego enlace al sitio de Drupodcast.

--- a/source/_views/components/sidebar.html.twig
+++ b/source/_views/components/sidebar.html.twig
@@ -11,8 +11,9 @@
 <div class="panel panel-default">
     <div class="panel-heading"><h4 class="panel-title">Sitios de interés</h4></div>
     <div class="list-group">
-        <a href="http://www.comunidadphppuebla.com" class="list-group-item">Comunidad PHP Puebla</a>
+        <a href="http://www.comunidadphppuebla.com/" class="list-group-item">Comunidad PHP Puebla</a>
         <a href="http://www.hfpuebla.org/" class="list-group-item">Hackers & Founders</a>
         <a href="http://scala.org.mx/" class="list-group-item">Scala MX</a>
+        <a href="http://www.drupodcast.com/" class="list-group-item">Drupodcast</a>
     </div>
 </div>
