--- a/source/_views/components/menu.html.twig
+++ b/source/_views/components/menu.html.twig
@@ -8,7 +8,9 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="/">{{ site.title }}</a>
+                <a class="navbar-brand" href="/" title="{{ site.title }}">
+                    <span class="glyphicon glyphicon-home"></span>
+                </a>
             </div>
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
