--- a/source/_views/components/post.html.twig
+++ b/source/_views/components/post.html.twig
@@ -2,13 +2,13 @@
     <div class="panel-heading">
         <h2 class="panel-title">
             <span class="glyphicon glyphicon-bookmark"></span>
-            <a href="/blog/categorias/{{ post.meta.categories[0]|url_encode(true) }}">
+            <a href="/blog/categorias/{{ post.meta.categories[0]|url_encode(true) }}/">
                 {{ post.categories[0] }}
             </a>&nbsp;
         </h2>
     </div>
     <div class="panel-body">
-        <h1><a href="{{ post.url }}">{{ post.title }}</a></h1>
+        <h1><a href="{{ post.url }}/">{{ post.title }}</a></h1>
     </div>
     <div class="panel-footer">
         <p class="pull-right">
@@ -22,7 +22,7 @@
         <p class="tags">
             <span class="glyphicon glyphicon-tags"></span>&nbsp;
             {% for tag in post.meta.tags %}
-                <a href="/blog/tags/{{ tag|url_encode(true) }}">{{ tag }}</a>{% if not loop.last %},&nbsp;{% endif %}
+                <a href="/blog/tags/{{ tag|url_encode(true) }}/">{{ tag }}</a>{% if not loop.last %},&nbsp;{% endif %}
             {% endfor %}
         </p>
     </div>
