Agrego primera versión del post sobre Flight.

--- a/source/_views/components/head.html.twig
+++ b/source/_views/components/head.html.twig
@@ -11,4 +11,6 @@
 <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
 <![endif]-->
 <link rel="stylesheet" href="/css/style.css" />
+<link href="/favicon.ico" rel="shortcut icon" type="image/x-icon" />
+<link href="/favicon.ico" rel="icon" type="image/x-icon" />
 <link rel="alternate" type="application/atom+xml" href="/atom.xml" title="{{ site.title }} activity feed" />
