--- a/source/css/style.css
+++ b/source/css/style.css
@@ -48,6 +48,7 @@ footer {
 pre, code {
     background: #fdf6e3;
     font-family: monospace;
+    font-size: 0.9em;
 }
 
 @media (min-width: 980px) {
