--- a/source/_views/components/post.html.twig
+++ b/source/_views/components/post.html.twig
@@ -13,7 +13,9 @@
     <div class="panel-footer">
         <p class="pull-right">
             <span class="glyphicon glyphicon-time"></span>
-            <small>{{ post.date|localizeddate('long', 'none', 'es', 'America/Mexico_City', 'MMMM dd yyyy') }}</small>
+            <small>
+                {{ post.date|localizeddate('long', 'none', 'es', 'America/Mexico_City', 'MMMM dd yyyy')|capitalize }}
+            </small>
         </p>
         <p>
             <span class="glyphicon glyphicon-comment"></span>&nbsp;
