Add post about forms processing
* Fix typo in Codeception post
* Add horizontal scrollbar to code blocks

--- a/source/css/style.css
+++ b/source/css/style.css
@@ -5,6 +5,14 @@ body {
 
 pre {
     font-family: Monaco, Consolas, monospace !important;
+    overflow: auto !important;
+    word-wrap: normal !important;
+    white-space: pre !important;
+}
+
+code {
+    word-wrap: normal !important;
+    white-space: pre !important;
 }
 
 .link-icon:hover {
