Actualizo copyright y links del sidebar.

--- a/source/_views/components/footer.html.twig
+++ b/source/_views/components/footer.html.twig
@@ -1,5 +1,5 @@
 <div class="container">
-    &copy; {{ "now"|date("Y") }} Luis Montealegre
+    &copy; 2014 - {{ "now"|date("Y") }} Luis Montealegre
     <p  class="pull-right">
         <a href="http://creativecommons.org/licenses/by-nc/2.5/">
             <img src="/images/cc.primary.srr.gif" alt="Algunos derechos reservados">
