--- a/source/_views/components/sidebar.html.twig
+++ b/source/_views/components/sidebar.html.twig
@@ -14,6 +14,21 @@
         <a href="http://www.comunidadphppuebla.com/" class="list-group-item">Comunidad PHP Puebla</a>
         <a href="http://www.hfpuebla.org/" class="list-group-item">Hackers & Founders</a>
         <a href="http://scala.org.mx/" class="list-group-item">Scala MX</a>
+        <ul class="list-group-item list-unstyled">
+            <li>
+                <a href="http://scala.org.mx/news/2015/01/29/funciones-scala/">
+                    Funciones en Scala
+                </a>
+            </li>
+        </ul>
         <a href="http://www.drupodcast.com/" class="list-group-item">Drupodcast</a>
+        <ul class="list-group-item list-unstyled">
+            <li>
+                <a href="http://www.drupodcast.com/podcast/drupodcast-s03-e09-con-luis-montealegre">
+                    Temporada 3, Episodio 9
+                </a>
+            </li>
+        </ul>
+        <a href="http://html5facil.com/" class="list-group-item">HTML5 Fácil</a>
     </div>
 </div>
