--- a/source/_views/components/menu.html.twig
+++ b/source/_views/components/menu.html.twig
@@ -15,7 +15,7 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
                     <li><a href="/archivo/">Archivo</a></li>
-                    <li><a href="/about/">About</a></li>
+                    <li><a href="/about/">¿Quién soy?</a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                     <li>
