--- a/source/_views/components/head.html.twig
+++ b/source/_views/components/head.html.twig
@@ -10,6 +10,7 @@
 <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
 <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
 <![endif]-->
+<link rel="stylesheet" href="/css/bootstrap-theme.min.css" />
 <link rel="stylesheet" href="/css/style.css" />
 <link href="/favicon.ico" rel="shortcut icon" type="image/x-icon" />
 <link href="/favicon.ico" rel="icon" type="image/x-icon" />
