--- a/source/_views/about.html.twig
+++ b/source/_views/about.html.twig
@@ -31,8 +31,8 @@
         {% include 'components/footer.html.twig' %}
     </footer>
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-    <script src="/components/bootstrap/js/bootstrap.min.js"></script>
+    <script src="http://code.jquery.com/jquery-2.1.1.min.js"></script>
+    <script src="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
     {% include 'components/analytics.html.twig' %}
 </body>
 </html>
