Update about page.

--- a/source/_views/about.html.twig
+++ b/source/_views/about.html.twig
@@ -17,7 +17,9 @@
                 <div class="media-body">
                     <div class="media-heading"><h1>¡Hola!</h1></div>
 
-                    Mi nombre es Luis Montealegre Vázquez y trabajo como <strong>desarrollador Web</strong>.
+                    Soy Luis Montealegre Vázquez y soy <strong>desarrollador Web</strong>
+                    e <strong>instructor</strong> en
+                    <a href="http://codeup.com/about/" target="_blank">Codeup</a>.
                 </div>
                 {% block content_wrapper %}{% block content %}{% endblock %}{% endblock %}
             </div>
