Add link to the notes on programming logic to the sidebar.

--- a/source/_views/about.html.twig
+++ b/source/_views/about.html.twig
@@ -18,7 +18,7 @@
                     <div class="media-heading"><h1>¡Hola!</h1></div>
 
                     Soy Luis Montealegre Vázquez y soy <strong>desarrollador Web</strong>
-                    e <strong>instructor</strong> en
+                    e <strong>Instructor</strong> en
                     <a href="http://codeup.com/about/" target="_blank">Codeup</a>.
                 </div>
                 {% block content_wrapper %}{% block content %}{% endblock %}{% endblock %}
