--- a/source/_views/components/sidebar.html.twig
+++ b/source/_views/components/sidebar.html.twig
@@ -11,24 +11,37 @@
 <div class="panel panel-default">
     <div class="panel-heading"><h4 class="panel-title">Sitios de interés</h4></div>
     <div class="list-group">
-        <a href="http://www.comunidadphppuebla.com/" class="list-group-item">Comunidad PHP Puebla</a>
-        <a href="http://www.hfpuebla.org/" class="list-group-item">Hackers & Founders</a>
-        <a href="http://scala.org.mx/" class="list-group-item">Scala MX</a>
+        <a href="http://www.comunidadphppuebla.com/" target="_blank" class="list-group-item">
+            Comunidad PHP Puebla
+        </a>
+        <a href="http://www.hfpuebla.org/" target="_blank" class="list-group-item">
+            Hackers & Founders
+        </a>
+        <a href="http://scala.org.mx/" target="_blank" class="list-group-item">
+            Scala MX
+        </a>
+        <a href="http://www.montealegreluis.com/logica-programacion/" target="_blank" class="list-group-item">
+            Notas de lógica de programación
+        </a>
         <ul class="list-group-item list-unstyled">
             <li>
-                <a href="http://scala.org.mx/news/2015/01/29/funciones-scala/">
+                <a href="http://scala.org.mx/news/2015/01/29/funciones-scala/" target="_blank">
                     Funciones en Scala
                 </a>
             </li>
         </ul>
-        <a href="http://www.drupodcast.com/" class="list-group-item">Drupodcast</a>
+        <a href="http://www.drupodcast.com/" class="list-group-item" target="_blank">
+            Drupodcast
+        </a>
         <ul class="list-group-item list-unstyled">
             <li>
-                <a href="http://www.drupodcast.com/podcast/drupodcast-s03-e09-con-luis-montealegre">
+                <a href="http://www.drupodcast.com/podcast/drupodcast-s03-e09-con-luis-montealegre" target="_blank">
                     Temporada 3, Episodio 9
                 </a>
             </li>
         </ul>
-        <a href="http://html5facil.com/" class="list-group-item">HTML5 Fácil</a>
+        <a href="http://html5facil.com/" class="list-group-item" target="_blank">
+            HTML5 Fácil
+        </a>
     </div>
 </div>
