Fix the order of links in the sidebar.

--- a/source/_views/components/sidebar.html.twig
+++ b/source/_views/components/sidebar.html.twig
@@ -17,11 +17,11 @@
         <a href="http://www.hfpuebla.org/" target="_blank" class="list-group-item">
             Hackers & Founders
         </a>
+        <a href="http://www.montealegreluis.com/logica-programacion/" target="_blank" class="list-group-item">
+            Notas de Programación
+        </a>
         <a href="http://scala.org.mx/" target="_blank" class="list-group-item">
             Scala MX
-        </a>
-        <a href="http://www.montealegreluis.com/logica-programacion/" target="_blank" class="list-group-item">
-            Notas de lógica de programación
         </a>
         <ul class="list-group-item list-unstyled">
             <li>
