Fix styles in the About page.

--- a/source/_views/about.html.twig
+++ b/source/_views/about.html.twig
@@ -10,20 +10,20 @@
 
     <div class="content container">
         <div class="row">
-            <div class="media col-sm-8 avatar">
+            <div class="media col-sm-9 avatar">
                 <div class="media-left media-middle">
                     <img src="/images/luis.jpg" class="media-object img-circle" alt="Luis">
                 </div>
                 <div class="media-body">
                     <div class="media-heading"><h1>¡Hola!</h1></div>
 
-                    Soy Luis Montealegre Vázquez y soy <strong>desarrollador Web</strong>
+                    Soy Luis Montealegre Vázquez, <strong>Desarrollador Web</strong>
                     e <strong>Instructor</strong> en
                     <a href="http://codeup.com/about/" target="_blank">Codeup</a>.
                 </div>
                 {% block content_wrapper %}{% block content %}{% endblock %}{% endblock %}
             </div>
-            <div class="col-sm-4 sidebar">
+            <div class="col-sm-3 sidebar">
                 {% include 'components/sidebar.html.twig' %}
             </div>
         </div>
