--- a/source/_views/components/menu.html.twig
+++ b/source/_views/components/menu.html.twig
@@ -16,6 +16,7 @@
                 <ul class="nav navbar-nav">
                     <li><a href="/archivo/">Archivo</a></li>
                     <li><a href="/about/">¿Quién soy?</a></li>
+                    <li><a href="/cv/">Curriculum</a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                     <li>
