--- a/source/_views/components/head.html.twig
+++ b/source/_views/components/head.html.twig
@@ -2,7 +2,17 @@
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link href='http://fonts.googleapis.com/css?family=Raleway:500' rel='stylesheet' type='text/css'>
+<link
+    href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
+    rel="stylesheet"
+    integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN"
+    crossorigin="anonymous"
+>
+<link
+    href='http://fonts.googleapis.com/css?family=Raleway:500'
+    rel='stylesheet'
+    type='text/css'
+>
 <link
     rel="stylesheet"
     href="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css"
