--- a/source/_views/components/menu.html.twig
+++ b/source/_views/components/menu.html.twig
@@ -17,6 +17,7 @@
                     <li><a href="/archivo/">Archivo</a></li>
                     <li><a href="/about/">¿Quién soy?</a></li>
                     <li><a href="/cv/">Curriculum</a></li>
+                    <li><a href="/portfolio/">Portfolio</a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                     <li>
