Add Docker with PHP 7 container to the packages section.

--- a/source/portfolio.html.twig
+++ b/source/portfolio.html.twig
@@ -41,21 +41,33 @@ use:
                 </div>
                 <div class="panel-footer">
                     <a
-                            title="Build Status"
-                            href="https://travis-ci.org/ComPHPPuebla/slim-modules"
+                        href="https://travis-ci.org/ComPHPPuebla/slim-modules"
+                        target="_blank"
+                        rel="noopener"
                     >
-                        <img src="https://travis-ci.org/ComPHPPuebla/slim-modules.svg?branch=master">
+                        <img
+                            src="https://travis-ci.org/ComPHPPuebla/slim-modules.svg?branch=master"
+                            alt="Build Status"
+                        >
                     </a>
-                    <a href="https://packagist.org/packages/comphppuebla/slim-modules">
+                    <a
+                        href="https://packagist.org/packages/comphppuebla/slim-modules"
+                        target="_blank"
+                        rel="noopener"
+                    >
                         <img
                                 src="https://poser.pugx.org/comphppuebla/slim-modules/license.svg"
                                 alt="License"
                         >
                     </a>
-                    <a href="https://insight.sensiolabs.com/projects/b86318b0-47ce-4d47-a0a4-db6e98dc8451">
+                    <a
+                        href="https://insight.sensiolabs.com/projects/b86318b0-47ce-4d47-a0a4-db6e98dc8451"
+                        target="_blank"
+                        rel="noopener"
+                    >
                         <img
-                                src="https://insight.sensiolabs.com/projects/b86318b0-47ce-4d47-a0a4-db6e98dc8451/mini.png"
-                                alt="SensioLabsInsight"
+                            src="https://insight.sensiolabs.com/projects/b86318b0-47ce-4d47-a0a4-db6e98dc8451/mini.png"
+                            alt="SensioLabsInsight"
                         >
                     </a>
                 </div>
@@ -74,6 +86,8 @@ use:
                 <div class="panel-footer">
                     <a
                         href="https://travis-ci.org/ComPHPPuebla/dbal-fixtures"
+                        target="_blank"
+                        rel="noopener"
                     >
                         <img
                             src="https://travis-ci.org/ComPHPPuebla/dbal-fixtures.svg?branch=master"
@@ -82,6 +96,8 @@ use:
                     </a>
                     <a
                         href="https://packagist.org/packages/comphppuebla/dbal-fixtures"
+                        target="_blank"
+                        rel="noopener"
                     >
                         <img
                             src="https://poser.pugx.org/comphppuebla/dbal-fixtures/license.svg"
@@ -90,6 +106,8 @@ use:
                     </a>
                     <a
                         href="https://insight.sensiolabs.com/projects/d876000d-611d-473f-b58c-64582903f7a9"
+                        target="_blank"
+                        rel="noopener"
                     >
                         <img
                             src="https://insight.sensiolabs.com/projects/d876000d-611d-473f-b58c-64582903f7a9/mini.png"
@@ -114,7 +132,11 @@ use:
                     <pre><code>composer require comphppuebla/easy-forms</code></pre>
                 </div>
                 <div class="panel-footer">
-                    <a href="https://travis-ci.org/ComPHPPuebla/easy-forms">
+                    <a
+                        href="https://travis-ci.org/ComPHPPuebla/easy-forms"
+                        target="_blank"
+                        rel="noopener"
+                    >
                         <img
                             src="https://travis-ci.org/ComPHPPuebla/easy-forms.svg?branch=master"
                             alt="Build Status"
@@ -122,6 +144,8 @@ use:
                     </a>
                     <a
                         href="https://packagist.org/packages/comphppuebla/easy-forms"
+                        target="_blank"
+                        rel="noopener"
                     >
                         <img
                             src="https://poser.pugx.org/comphppuebla/easy-forms/license.svg"
@@ -130,6 +154,8 @@ use:
                     </a>
                     <a
                         href="https://insight.sensiolabs.com/projects/b21b5fac-a347-4c1a-b9b0-9965a93893ea"
+                        target="_blank"
+                        rel="noopener"
                     >
                         <img
                             src="https://insight.sensiolabs.com/projects/b21b5fac-a347-4c1a-b9b0-9965a93893ea/mini.png"
@@ -139,5 +165,34 @@ use:
                 </div>
             </div>
         </div>
+        <div class="col-sm-6">
+            <div class="panel panel-default">
+                <div class="panel-heading">
+                    Docker container with PHP 7
+                </div>
+                <div class="panel-body">
+                    <p>
+                        This is a docker container to easily setup an
+                        application on PHP 7. As easy as copying your code to
+                        the <code>sites</code> folder
+                    </p>
+                </div>
+                <div class="panel-footer">
+                    <a
+                        href="https://github.com/MontealegreLuis/php-container"
+                        target="_blank"
+                        rel="noopener"
+                    >
+                        <img
+                            src="https://img.shields.io/github/license/mashape/apistatus.svg?maxAge=2592000"
+                            alt="license"
+                        >
+                    </a>
+
+
+                </div>
+            </div>
+        </div>
     </div>
 </section>
+
