Add some repositories to the examples section.

--- a/source/portfolio.html.twig
+++ b/source/portfolio.html.twig
@@ -188,11 +188,83 @@ use:
                             alt="license"
                         >
                     </a>
-
-
                 </div>
             </div>
         </div>
     </div>
 </section>
-
+<section>
+    <h2>
+        <i class="fa fa-bookmark" aria-hidden="true"></i>
+        Examples
+    </h2>
+    <p>
+       These are some repositories with code samples.
+    </p>
+    <div class="row">
+        <div class="col-sm-6">
+            <div class="panel panel-default">
+                <div class="panel-heading">
+                    Hibernate example
+                </div>
+                <div class="panel-body">
+                    This is a command line application, showing how to map a
+                    many to many relationship using XML, and how to write some HQL
+                    queries.
+                </div>
+                <div class="panel-footer">
+                    <a
+                        href="https://github.com/MontealegreLuis/hibernate-example"
+                        target="_blank"
+                        rel="noopener"
+                    >
+                        <img
+                            src="https://img.shields.io/github/license/mashape/apistatus.svg?maxAge=2592000"
+                            alt="license"
+                        >
+                    </a>
+                </div>
+            </div>
+        </div>
+        <div class="col-sm-6">
+            <div class="panel panel-default">
+                <div class="panel-heading">
+                    Web application with Servlets example
+                </div>
+                <div class="panel-body">
+                    This is a small web application with a catalog of movies.
+                </div>
+                <div class="panel-footer">
+                    <a
+                        href="https://github.com/MontealegreLuis/hibernate-example"
+                        target="_blank"
+                        rel="noopener"
+                    >
+                        <img
+                            src="https://img.shields.io/github/license/mashape/apistatus.svg?maxAge=2592000"
+                            alt="license"
+                        >
+                    </a>
+                    <a
+                        href="https://travis-ci.org/MontealegreLuis/movies"
+                        target="_blank"
+                        rel="noopener"
+                    >
+                        <img
+                            src="https://travis-ci.org/MontealegreLuis/movies.svg?branch=master"
+                            alt="Build Status"
+                        >
+                    </a>
+                    <a
+                        href="https://codebeat.co/projects/github-com-montealegreluis-movies"
+                    >
+                        <img
+                            src="https://codebeat.co/badges/9a9920f0-dbf3-4424-a5dc-e7d429870bdc"
+                            alt="codebeat badge"
+                        >
+                    </a>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
