--- a/source/_views/components/menu.html.twig
+++ b/source/_views/components/menu.html.twig
@@ -14,8 +14,7 @@
             </div>
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
-                    <li><a href="/archivo/">Archivo</a></li>
-                    <li><a href="/about/">¿Quién soy?</a></li>
+                    <li><a href="/blog/">Blog</a></li>
                     <li><a href="/cv/">Curriculum</a></li>
                     <li><a href="/portfolio/">Portfolio</a></li>
                 </ul>
