Add PHP testing tools repo to portfolio.

--- a/source/portfolio.html.twig
+++ b/source/portfolio.html.twig
@@ -20,9 +20,9 @@ use:
             <p>
                 These are some packages I created under the PHP Puebla User Group
                 <a
-                        href="https://github.com/ComPHPPuebla"
-                        target="_blank"
-                        rel="noopener"
+                    href="https://github.com/ComPHPPuebla"
+                    target="_blank"
+                    rel="noopener"
                 >
                     organization
                 </a>
@@ -223,6 +223,26 @@ use:
                             alt="license"
                         >
                     </a>
+                    <a
+                        href="https://travis-ci.org/MontealegreLuis/hibernate-example"
+                        target="_blank"
+                        rel="noopener"
+                    >
+                        <img
+                            src="https://travis-ci.org/MontealegreLuis/hibernate-example.svg?branch=master"
+                            alt="Build Status"
+                        >
+                    </a>
+                    <a
+                        href="https://codebeat.co/projects/github-com-montealegreluis-hibernate-example"
+                        target="_blank"
+                        rel="noopener"
+                    >
+                        <img
+                            src="https://codebeat.co/badges/df70242a-a3d4-4367-8785-6703e4e243e6"
+                            alt="codebeat badge"
+                        >
+                    </a>
                 </div>
             </div>
         </div>
@@ -257,10 +277,57 @@ use:
                     </a>
                     <a
                         href="https://codebeat.co/projects/github-com-montealegreluis-movies"
+                        target="_blank"
+                        rel="noopener"
                     >
                         <img
                             src="https://codebeat.co/badges/9a9920f0-dbf3-4424-a5dc-e7d429870bdc"
                             alt="codebeat badge"
+                        >
+                    </a>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-sm-6">
+            <div class="panel panel-default">
+                <div class="panel-heading">
+                    PHP testing tools
+                </div>
+                <div class="panel-body">
+                    Code examples with several PHP testing tools: Behat, phpspec,
+                    PHPUnit, Mockery, Alice, Codeception, Eris, Humbug
+                </div>
+                <div class="panel-footer">
+                    <a
+                        href="https://github.com/MontealegreLuis/php-testing-tools"
+                        target="_blank"
+                        rel="noopener"
+                    >
+                        <img
+                            src="https://img.shields.io/github/license/mashape/apistatus.svg?maxAge=2592000"
+                            alt="license"
+                        >
+                    </a>
+                    <a
+                        href="https://travis-ci.org/MontealegreLuis/php-testing-tools"
+                        target="_blank"
+                        rel="noopener"
+                    >
+                        <img
+                            src="https://travis-ci.org/MontealegreLuis/php-testing-tools.svg?branch=master"
+                            alt="Build Status"
+                        >
+                    </a>
+                    <a
+                        href="https://codeclimate.com/github/MontealegreLuis/php-testing-tools"
+                        target="_blank"
+                        rel="noopener"
+                    >
+                        <img
+                            src="https://codeclimate.com/github/MontealegreLuis/php-testing-tools/badges/gpa.svg"
+                            alt="Code Climate"
                         >
                     </a>
                 </div>
