Add Composer and Symfony 2 workshops.

--- a/source/portfolio.html.twig
+++ b/source/portfolio.html.twig
@@ -335,3 +335,58 @@ use:
         </div>
     </div>
 </section>
+<section>
+    <h2>
+        <i class="fa fa-code" aria-hidden="true"></i>
+        Coding workshops
+    </h2>
+    <div class="row">
+        <div class="col-sm-6">
+            <div class="panel panel-default">
+                <div class="panel-heading">
+                    Composer workshop
+                </div>
+                <div class="panel-body">
+                    This workshop incrementally builds a simple web framework,
+                    adding a PHP library with Composer on each phase.
+                </div>
+                <div class="panel-footer">
+                    <a
+                        href="https://github.com/ComPHPPuebla/taller-composer"
+                        target="_blank"
+                        rel="noopener"
+                    >
+                        <img
+                            src="https://img.shields.io/github/license/mashape/apistatus.svg?maxAge=2592000"
+                            alt="license"
+                        >
+                    </a>
+                </div>
+            </div>
+        </div>
+        <div class="col-sm-6">
+            <div class="panel panel-default">
+                <div class="panel-heading">
+                    Symfony 2 workshop
+                </div>
+                <div class="panel-body">
+                    The goal of this workshop is to start using the Symfony2
+                    components in a legacy application in order to start using
+                    the full-stack framework at the end.
+                </div>
+                <div class="panel-footer">
+                    <a
+                        href="https://github.com/ComPHPPuebla/sf2workshop"
+                        target="_blank"
+                        rel="noopener"
+                    >
+                        <img
+                            src="https://img.shields.io/github/license/mashape/apistatus.svg?maxAge=2592000"
+                            alt="license"
+                        >
+                    </a>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
