Start adding links to youtube videos.

--- a/source/portfolio.html.twig
+++ b/source/portfolio.html.twig
@@ -390,3 +390,39 @@ use:
         </div>
     </div>
 </section>
+<section>
+    <h2>
+        <i class="fa fa-video-camera" aria-hidden="true"></i>
+        Video tutorials
+    </h2>
+    <div class="row">
+        <div class="col-sm-6">
+            <div class="panel panel-default">
+                <div class="panel-heading">
+                    TDD 101
+                </div>
+                <div class="panel-body">
+                    <div class="media">
+                        <div class="media-left">
+                            <a
+                                href="https://www.youtube.com/watch?v=2GuYLle45bw"
+                                target="_blank"
+                                rel="noopener"
+                            >
+                                <img
+                                    src="http://i3.ytimg.com/vi/2GuYLle45bw/2.jpg"
+                                    alt="TDD 101"
+                                >
+                            </a>
+                        </div>
+                        <div class="media-body">
+                            This is a live coding demo, to start doing TDD using
+                            PHPUnit. It also explains the difference between
+                            code transformations and refactoring.
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
