Add testing class to videos section.

--- a/source/portfolio.html.twig
+++ b/source/portfolio.html.twig
@@ -424,5 +424,33 @@ use:
                 </div>
             </div>
         </div>
+        <div class="col-sm-6">
+            <div class="panel panel-default">
+                <div class="panel-heading">
+                    An overview of testing libraries in PHP
+                </div>
+                <div class="panel-body">
+                    <div class="media">
+                        <div class="media-left">
+                            <a
+                                href="https://www.youtube.com/watch?v=6IH2Un35pb0"
+                                target="_blank"
+                                rel="noopener"
+                            >
+                                <img
+                                    src="http://i3.ytimg.com/vi/6IH2Un35pb0/2.jpg"
+                                    alt="Testing in PHP"
+                                >
+                            </a>
+                        </div>
+                        <div class="media-body">
+                            This is an introduction to testing in PHP using
+                            several libraries: Behat, phpspec, PHPUnit, Mockery,
+                            Alice, Codeception, Eris, Humbug.
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 </section>
