Add Slim 2 workshop to the list of videos.

--- a/source/portfolio.html.twig
+++ b/source/portfolio.html.twig
@@ -453,4 +453,46 @@ use:
             </div>
         </div>
     </div>
+    <div class="row">
+        <div class="col-sm-12">
+            <div class="panel panel-default">
+                <div class="panel-heading">
+                    Slim 2 workshop
+                </div>
+                <div class="panel-body">
+                    <div class="media">
+                        <div class="media-left">
+                            <a
+                                href="https://www.youtube.com/watch?v=P5s8Sydo154"
+                                target="_blank"
+                                rel="noopener"
+                            >
+                                <img
+                                    src="http://i3.ytimg.com/vi/P5s8Sydo154/2.jpg"
+                                    alt="Part 1"
+                                >
+                            </a>
+                        </div>
+                        <div class="media-body">
+                            This is a Slim 2 workshop divided into two videos.
+                            It's a small application to upload, browse and play
+                            audio files.
+                        </div>
+                        <div class="media-right">
+                            <a
+                                href="https://www.youtube.com/watch?v=iRDwfnKOKtk"
+                                target="_blank"
+                                rel="noopener"
+                            >
+                                <img
+                                    src="http://i3.ytimg.com/vi/iRDwfnKOKtk/2.jpg"
+                                    alt="Part 2"
+                               >
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </section>
