Add Fitbit API example.

--- a/source/portfolio.html.twig
+++ b/source/portfolio.html.twig
@@ -333,6 +333,28 @@ use:
                 </div>
             </div>
         </div>
+        <div class="col-sm-6">
+            <div class="panel panel-default">
+                <div class="panel-heading">
+                    Fitbit API integration with Laravel
+                </div>
+                <div class="panel-body">
+                    Small Laravel application to demo the use of the Fitbit API
+                </div>
+                <div class="panel-footer">
+                    <a
+                        href="https://github.com/MontealegreLuis/fitbit-example"
+                        target="_blank"
+                        rel="noopener"
+                    >
+                        <img
+                            src="https://img.shields.io/github/license/mashape/apistatus.svg?maxAge=2592000"
+                            alt="license"
+                        >
+                    </a>
+                </div>
+            </div>
+        </div>
     </div>
 </section>
 <section>
